# agentic-skill-behavioral-audit

./: .gitignore  DECISIONS.md  EXECUTIVE_SUMMARY.md  LICENSE  README.md  SKILL_AUTHORING_GUIDE.md  manifest.csv  methodology.md  report.html  report.md
analysis/: adversarial-policy-interaction.py  citation-justifications.md  compare.py  failure-mode-taxonomy.json  failure-mode-taxonomy.md  failure-mode-taxonomy.py  figures.py  finding-o-adversarial-policy.md  mechanism-investigation.md  multitask-fuzzing.json  multitask-fuzzing.md  multitask-fuzzing.py  mutation-suite-ablation.json  mutation-suite-ablation.md  mutation-suite-ablation.py  mutation-suite.json  mutation-suite.md  mutation-suite.py  per-skill.json  policy-bundle-generator.py  policy-bundle-prototype.md  policy-enforcement.json  policy-enforcement.md  policy-enforcement.py  policy-eval.json  policy-eval.md  policy-eval.py  predictor-variance.json  predictor-variance.md  predictor-variance.py  predictor-vs-truth.json  predictor-vs-truth.md  predictor-vs-truth.py  sandboxing-granularity.json  sandboxing-granularity.md  sandboxing-granularity.py  stability-effort.json  stability-effort.md  stability-effort.py  static-audit.py  (+10 more)
dashboard/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
harness/: README.md  augment-skills.sh  codex-one-off.py  extract-prompt.py  fetch-tranche2.sh  install-mutations.sh  md-to-html.py  parse-pcap.py  parse-strace.py  predict-codex.py  predict-fresh.py  predict.py  relocate-fresh-codex.sh  run-all.sh  run-codex-batch-2.sh  run-codex-batch.sh  run-effort-medium.sh  run-multitask-batch.sh  run-mutations-p4-resume.sh  (+8 more)
skill-auditor/: README.md  pyproject.toml
skill-auditor/skill_auditor/: __init__.py  cli.py  policy.py  predict.py
(+271 files in other folders)
